css/about.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    /* font-family: 'Bangers', cursive; */
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* My code below */
.container {
    width: 800px;
    margin: auto;
}
header {
    display: flex;
    justify-content: space-between;
    margin: 35px 0px;
}
header nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: relative;
    right: 75px;
}
header nav a {
    text-decoration: none;
    color: black;
    margin: 5px 25px;
}
#banner-img {
    margin-bottom: 20px;
}
h2 {
    font-size: 15pt;
}
p {
    font-size: 11pt;
}
.boxes {
    display: flex;
    flex-flow: row wrap;
    width: 900px;
    margin: 25px 0;
}
.boxes section {
    display: flex;
    flex-direction: column;
    width: 400px;
    padding: 7.5px;
    margin-right: 7.5px;
    border-bottom: 1px dashed black;
    position: relative;
    right: 5px;
}
.boxes section h2 {
    margin: 10px 0;
}
.learn {
    background-color: white;
    border: 2px solid black;
    border-radius: 12%;
    padding: 7.5px;
    margin-top: 10px;
    width: 110px;
    height: 35px;
    text-align: center;
}


.bottom {
    margin: 25px 0;
}
footer {
    width: 100%;
    background: black;
}
footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}
footer nav a {
    color: white;
    text-decoration: none;
}

